--- a/hello.html
+++ b/hello.html
@@ -4,5 +4,6 @@
 </head>
 <body>
   Hello! welcome to my new web page.
-  Second commit will be done . adding this line
+  Second commit will be done . adding this line.
+  third commit . hi there
 </body>
